[project]
name = "living-doc-utilities"
version = "0.1.0"
description = "Core utility functions and data models shared across the living-doc ecosystem."
authors = [{ name="Mirosva Pojer", email="miroslav.pojer@absa.africa" }]
readme = "README.md"
license = {text = "Apache 2.0"}
requires-python = ">=3.12"

[project.urls]
Repository = "https://github.com/AbsaOSS/living-doc-utilities"

[tool.black]
line-length = 120
target-version = ['py312']
force-exclude = '''test'''

[tool.coverage.run]
omit = ["tests/*"]

[tool.mypy]
check_untyped_defs = true
exclude = "tests"
